Added basic statistics to the user modal

--- a/src/Colours.scss
+++ b/src/Colours.scss
@@ -51,4 +51,5 @@ $status-qualified-colour: #2da554;
 $status-ranked-colour: #5aa500;
 $status-popped-colour: #a57d5d;
 $status-dqed-colour: #a54e4b;
-$status-graved-colour: #a5a5a5
+$status-graved-colour: #a5a5a5;
+$status-unfinished-colour: #6253a5;
