--- a/src/App.scss
+++ b/src/App.scss
@@ -249,6 +249,13 @@ div.ui.selection.dropdown div.text {
   }
 }
 
+.custom-tooltip {
+  padding: 4px;
+  background-color: $background-colour-light;
+  border: $background-colour-dark 1px solid;
+  border-radius: 5%;
+}
+
 .ui.popup > .ui.grid.filter-settings-popup {
   width: max-content;
   max-width: 700px;
