--- a/src/components/user/Users.scss
+++ b/src/components/user/Users.scss
@@ -61,6 +61,10 @@
   border-radius: 500em;
 }
 
+.mapper-avatar {
+  background-color: $background-colour-lighter
+}
+
 .user-role-bn-text {
   background-color: $bn-colour !important;
 }
