--- a/src/components/beatmaps/Beatmaps.scss
+++ b/src/components/beatmaps/Beatmaps.scss
@@ -10,7 +10,7 @@
   color: #d7d7d7 !important;
 }
 
-.beatmap-status-bubbed {
+.beatmap-status-bubbled {
   background-color: #2b56a5 !important;
   color: #d7d7d7 !important;
 }
@@ -55,7 +55,7 @@ u.beatmap-status-pending {
   color: #67b4d0 !important;
 }
 
-u.beatmap-status-bubbed {
+u.beatmap-status-bubbled {
   background-color: rgba(0, 0, 0, 0) !important;
   color: #346ccd !important;
 }
