--- a/src/Colours.scss
+++ b/src/Colours.scss
@@ -13,27 +13,23 @@ $background-colour-dark: #2c2c2c;
 $background-colour-darker: #232323;
 $background-colour-bg: #1c1c1c;*/
 
-
-$background-colour-lighter: #424253;
+/*$background-colour-lighter: #424253;
 $background-colour-light: #2f2f3d;
 $background-colour: #262632;
 $background-colour-dark: #1b1b24;
 $background-colour-darker: #161621;
-$background-colour-bg: #101018;
+$background-colour-bg: #101018;*/
 
-/*$background-colour-lighter: #4c4253;
-$background-colour-light: #3c2f3d;
-$background-colour: #2e2632;
-$background-colour-dark: #231b24;
-$background-colour-darker: #1f1621;
-$background-colour-bg: #161018;*/
 
-/*$background-colour-lighter: #393953;
-$background-colour-light: #313148;
-$background-colour: #232334;
-$background-colour-dark: #1B1C29;
-$background-colour-darker: #181824;
-$background-colour-bg: #14151f;*/
+$background-colour: #27292a;
+//$background-colour: #30303b;
+$background-colour-lighter: lighten($background-colour, 10%);
+$background-colour-light: lighten($background-colour, 5%);
+$background-colour-dark: darken($background-colour, 5%);
+$background-colour-darker: darken($background-colour, 8%);
+
+//$background-colour-bg: darken($background-colour, 10%);
+$background-colour-bg: darken($background-colour, 10%);
 
 $osu-colour-dark: #cc5288;
 $osu-colour-darker: #bb1177;
@@ -46,7 +42,7 @@ $confirm-colour: #21ba45;
 $leader-colour: #cdab1f;
 
 $status-pending-colour: #538ea5;
-$status-bubbed-colour: #2b56a5;
+$status-bubbled-colour: #2b56a5;
 $status-qualified-colour: #2da554;
 $status-ranked-colour: #5aa500;
 $status-popped-colour: #a57d5d;
